@@ -148,6 +148,14 @@ name|ORGANISATION_KEY
 init|=
 literal|"organisation"
 decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|ORGANISATION_KEY2
+init|=
+literal|"organization"
+decl_stmt|;
 specifier|private
 specifier|static
 specifier|final
@@ -417,6 +425,21 @@ operator|.
 name|put
 argument_list|(
 name|ORGANISATION_KEY
+argument_list|,
+name|org
+operator|==
+literal|null
+condition|?
+literal|""
+else|:
+name|org
+argument_list|)
+expr_stmt|;
+name|tokens
+operator|.
+name|put
+argument_list|(
+name|ORGANISATION_KEY2
 argument_list|,
 name|org
 operator|==
